--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Sistemas de cadastro de Jogos</h1>
     <script src="app.js"></script>
+    <style>
+        
+    </style>
 </body>
 </html>
