--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sistemas de cadastro de Jogos</h1>
-    <script src="app.js"></script>
-    <style>
-        
-    </style>
+    <h1>Sistemas de cadastro de Jogos 2D e 3D</h1>
 </body>
 </html>
